--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Logs
 logs
 *.log
+config
+
 
 # Runtime data
 pids
@@ -110,3 +112,6 @@ $RECYCLE.BIN/
 # Others
 lib/
 data/
+/src/config.js
+src/config.js
+
