--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "feathers-rest": "^1.8.1",
     "feathers-socketio": "^2.0.1",
     "helmet": "^3.9.0",
+    "request-promise": "^4.2.2",
     "serve-favicon": "^2.4.5",
     "winston": "^2.4.0"
   },
