--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "test": "test/"
   },
   "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
+    "node": "7.10.0",
+    "npm": "4.2.0"
   },
   "scripts": {
     "test": "npm run eslint && npm run mocha",
